--- a/sucesso/index.html
+++ b/sucesso/index.html
@@ -21,7 +21,7 @@
         !function (f, b, e, v, n, t, s) {
             if (f.fbq) return; n = f.fbq = function () {
                 n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
             };
             if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
             n.queue = []; t = b.createElement(e); t.async = !0;
@@ -87,10 +87,7 @@
 
     <!-- Success Section -->
     <section class="hero" id="hero" style="min-height: 80vh; display: flex; align-items: center;">
-        <div class="hero-bg">
-            <div class="hero-orb hero-orb-1"></div>
-            <div class="hero-orb hero-orb-2"></div>
-        </div>
+        <!-- Bubbles removed -->
         <div class="container hero-content text-center" style="max-width: 800px; margin: 0 auto; text-align: center;">
             <div class="badge animate-fade-up">
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
