--- a/quiz/index.html
+++ b/quiz/index.html
@@ -60,7 +60,8 @@
         </div>
     </main>
 
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
