--- a/quiz/index.html
+++ b/quiz/index.html
@@ -13,9 +13,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
 
     <!-- Reuse main styles -->
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <!-- Quiz specific styles -->
-    <link rel="stylesheet" href="quiz.css">
+    <link rel="stylesheet" href="/quiz/quiz.css">
 
     <!-- Meta Pixel Code - Keeping it consistent -->
     <script>
@@ -60,8 +60,8 @@
         </div>
     </main>
 
-    <script src="../script.js"></script>
-    <script src="app.js"></script>
+    <script src="/script.js"></script>
+    <script src="/quiz/app.js"></script>
 </body>
 
 </html>
