--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         content="Nutrição organizada por inteligência artificial. Baseada em dados, não em promessas. Calculadoras científicas para TMB, TDEE, macros e mais.">
     <meta name="theme-color" content="#FAF8F5">
     <title>enerz.ai | Nutrição por IA</title>
+    <link rel="icon" type="image/png" href="enerz.png">
 
     <!-- Preload critical assets -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +22,7 @@
         !function (f, b, e, v, n, t, s) {
             if (f.fbq) return; n = f.fbq = function () {
                 n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
             };
             if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
             n.queue = []; t = b.createElement(e); t.async = !0;
