--- a/sucesso/index.html
+++ b/sucesso/index.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="Nutrição organizada por inteligência artificial. Baseada em dados, não em promessas. Calculadoras científicas para TMB, TDEE, macros e mais.">
     <meta name="theme-color" content="#FAF8F5">
-    <title>Sucesso | enerz.ai</title>
+    <title>Sucesso | ENERZ</title>
 
     <!-- Preload critical assets -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -119,7 +119,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-brand">
-                    <a href="../index.html" class="footer-logo">enerz.ai</a>
+                    <a href="../index.html" class="footer-logo">ENERZ</a>
                     <p>Nutrição por IA. Baseada em dados.</p>
                 </div>
 
@@ -155,7 +155,7 @@
             </div>
 
             <div class="footer-bottom">
-                <p>&copy; 2024 enerz.ai. Todos os direitos reservados.</p>
+                <p>&copy; 2024 ENERZ. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
