--- a/index.html
+++ b/index.html
@@ -317,12 +317,12 @@
                     <div class="comparison-wrapper">
                         <div class="comparison-container" id="comparisonContainer">
                             <div class="comparison-image after">
-                                <img src="assets/after.png" alt="Depois">
+                                <img src="assets/depois.png" alt="Depois">
                                 <span class="label">DEPOIS</span>
                             </div>
                             <div class="comparison-image before" id="beforeImage">
                                 <div class="image-wrapper">
-                                    <img src="assets/before.png" alt="Antes">
+                                    <img src="assets/antes.png" alt="Antes">
                                 </div>
                                 <span class="label">ANTES</span>
                             </div>
