--- a/index.html
+++ b/index.html
@@ -459,9 +459,11 @@
                         <span class="period">/ mês</span>
                     </div>
                     <div class="price annual-price hidden">
-                        <span class="currency">12x</span>
-                        <span class="amount">R$ 23,99</span>
-                        <span class="period">Total R$ 287,88 / ano</span>
+                        <div class="annual-main">
+                            <span class="installments">12x</span>
+                            <span class="amount">R$ 23,99</span>
+                        </div>
+                        <div class="annual-total">Total R$ 287,88 / ano</div>
                     </div>
                 </div>
 
