--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
                 <div class="video-mockup">
                     <!-- video-glow removed -->
                     <div class="video-container">
-                        <video autoplay muted loop playsinline>
+                        <video autoplay muted loop playsinline controlsList="nodownload" oncontextmenu="return false;"
+                            disablePictureInPicture>
                             <source src="assets/videopronto.mp4" type="video/mp4">
                         </video>
                     </div>
