--- a/sucesso/index.html
+++ b/sucesso/index.html
@@ -56,7 +56,7 @@
                 <a href="../index.html#como-funciona">Como Funciona</a>
                 <a href="../index.html#beneficios">Benefícios</a>
                 <a href="../index.html#precos">Preços</a>
-                <a href="/metodos-cientificos">Calculadoras</a>
+                <a href="/calculadora">Calculadoras</a>
             </div>
 
             <a href="../index.html#precos" class="btn btn-primary nav-cta">Começar</a>
@@ -88,7 +88,7 @@
                 <a href="../index.html#como-funciona">Como Funciona</a>
                 <a href="../index.html#beneficios">Benefícios</a>
                 <a href="../index.html#precos">Preços</a>
-                <a href="/metodos-cientificos">Calculadoras</a>
+                <a href="/calculadora">Calculadoras</a>
             </div>
             <a href="../index.html#precos" class="btn btn-primary mobile-menu-cta">Começar</a>
         </div>
@@ -138,18 +138,17 @@
                         <li><a href="../index.html#como-funciona">Como Funciona</a></li>
                         <li><a href="../index.html#beneficios">Benefícios</a></li>
                         <li><a href="../index.html#precos">Preços</a></li>
-                        <li><a href="/metodos-cientificos">Métodos</a></li>
+                        <li><a href="/calculadora">Métodos</a></li>
                     </ul>
                 </div>
 
                 <div class="footer-links">
                     <h4>Calculadoras</h4>
                     <ul>
-                        <li><a href="/metodos-cientificos/tmb">TMB</a></li>
-                        <li><a href="/metodos-cientificos/tdee">TDEE</a></li>
-                        <li><a href="/metodos-cientificos/percentage-fat">% Gordura</a></li>
-                        <li><a href="/metodos-cientificos/protein">Proteína</a></li>
-                        <li><a href="/metodos-cientificos/macro-distribution">Macros</a></li>
+                        <li><a href="/calculadora#tmb">TMB</a></li>
+                        <li><a href="/calculadora#tdee">TDEE</a></li>
+                        <li><a href="/calculadora#imc">IMC</a></li>
+                        <li><a href="/calculadora#protein">Proteína</a></li>
                     </ul>
                 </div>
 
