--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="Calculadoras de saúde gratuitas: TMB, IMC, Proteína Diária e TDEE. Ferramentas científicas para sua nutrição.">
     <meta name="theme-color" content="#FAF8F5">
-    <title>Calculadoras | ENERZ</title>
+    <title>Calculadoras de Saúde Gratuitas - TMB, IMC, TDEE | ENERZ</title>
     <link rel="icon" type="image/png" href="../enerz.png">
 
     <!-- Preload critical assets -->
