--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -8,15 +8,15 @@
         content="Calculadoras de saúde gratuitas: TMB, IMC, Proteína Diária e TDEE. Ferramentas científicas para sua nutrição.">
     <meta name="theme-color" content="#FAF8F5">
     <title>Calculadoras de Saúde Gratuitas - TMB, IMC, TDEE | ENERZ</title>
-    <link rel="icon" type="image/png" href="../enerz.png">
+    <link rel="icon" type="image/png" href="/enerz.png">
 
     <!-- Preload critical assets -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../styles.css">
-    <link rel="stylesheet" href="calculator.css">
+    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/calculadora/calculator.css">
 
     <!-- Microsoft Clarity -->
     <script type="text/javascript">
@@ -352,8 +352,8 @@
         </div>
     </footer>
 
-    <script src="../script.js"></script>
-    <script src="calculator.js"></script>
+    <script src="/script.js"></script>
+    <script src="/calculadora/calculator.js"></script>
 </body>
 
 </html>
