--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta name="description"
-        content="Nutrição organizada por inteligência artificial. Baseada em dados, não em promessas. Calculadoras científicas para TMB, TDEE, macros e mais.">
+        content="Sua dieta em 3 minutos. Baseada em dados, não em promessas. Foco em qualidade e precisão com IA.">
     <meta name="theme-color" content="#FAF8F5">
     <title>ENERZ | Nutrição por IA</title>
     <link rel="icon" type="image/png" href="enerz.png">
@@ -64,7 +64,7 @@
                 <a href="/calculadora">Calculadoras</a>
             </div>
 
-            <a href="#precos" class="btn btn-primary nav-cta">Começar</a>
+            <a href="https://wa.me/5534991355078?text=Ol%C3%A1!%20Quero%20come%C3%A7ar%20meu%20teste%20gr%C3%A1tis%20de%207%20dias%20da%20ENERZ!" target="_blank" class="btn btn-primary nav-cta">Começar</a>
 
             <button class="menu-toggle" id="menuToggle" aria-label="Menu">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -100,7 +100,7 @@
                 <a href="#precos">Preços</a>
                 <a href="/calculadora">Calculadoras</a>
             </div>
-            <a href="#precos" class="btn btn-primary mobile-menu-cta">Começar</a>
+            <a href="https://wa.me/5534991355078?text=Ol%C3%A1!%20Quero%20come%C3%A7ar%20meu%20teste%20gr%C3%A1tis%20de%207%20dias%20da%20ENERZ!" target="_blank" class="btn btn-primary mobile-menu-cta">Começar</a>
         </div>
     </div>
 
@@ -120,9 +120,9 @@
                 Você não falha na dieta. <span class="text-primary">Ela que falha</span> para se adaptar a você.
             </h1>
             <p class="hero-subtitle animate-fade-up delay-2">
-                A Enerz recalcula sua dieta conforme seu corpo, seus gostos, sua rotina e seus objetivos mudam.
+                A Enerz cria e recalcula sua dieta conforme seu corpo, seus gostos, sua rotina e seus objetivos mudam.
             </p>
-            <a href="#precos" class="btn btn-primary btn-lg animate-fade-up delay-3">
+            <a href="https://wa.me/5534991355078?text=Ol%C3%A1!%20Quero%20come%C3%A7ar%20meu%20teste%20gr%C3%A1tis%20de%207%20dias%20da%20ENERZ!" target="_blank" class="btn btn-primary btn-lg animate-fade-up delay-3">
                 Começar
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <line x1="5" y1="12" x2="19" y2="12"></line>
@@ -453,29 +453,13 @@
         <div class="container">
             <h2 class="section-title text-center"><span class="text-primary">Acesso</span></h2>
 
-            <div class="billing-toggle">
-                <span class="toggle-label" data-billing="monthly">Mensal</span>
-                <button class="toggle-switch" id="billingToggle" aria-label="Alternar plano">
-                    <span class="toggle-handle"></span>
-                </button>
-                <span class="toggle-label" data-billing="annual">Anual</span>
-            </div>
-
             <div class="pricing-card">
                 <div class="price-display">
-                    <div class="price monthly-price">
-                        <span class="currency">R$</span>
-                        <span class="amount">29,99</span>
-                        <span class="period">/ mês</span>
-                    </div>
-                    <div class="price annual-price hidden">
-                        <div class="annual-main">
-                            <span class="installments">12x</span>
-                            <span class="amount">R$ 23,99</span>
-                        </div>
-                        <div class="annual-total">Total R$ 287,88 / ano</div>
+                    <div class="price">
+                        <span class="amount" style="font-size: 2.5rem;">7 dias grátis</span>
                     </div>
                 </div>
+                <p class="section-subtitle text-center" style="margin-bottom: 2rem; opacity: 0.8;">Experimente a ENERZ sem compromisso. Sem cartão de crédito.</p>
 
                 <ul class="pricing-features">
                     <li>
@@ -506,20 +490,13 @@
                         </svg>
                         Suporte via WhatsApp
                     </li>
-                    <li class="annual-only hidden">
-                        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                            stroke-width="2">
-                            <polyline points="20 6 9 17 4 12"></polyline>
-                        </svg>
-                        <strong>Economia de R$ 72,00/ano</strong>
-                    </li>
                 </ul>
 
-                <a href="https://pay.hub.la/azRo1diUh1n6VGO5CqEj" class="btn btn-primary btn-lg pricing-cta"
+                <a href="https://wa.me/5534991355078?text=Ol%C3%A1!%20Quero%20come%C3%A7ar%20meu%20teste%20gr%C3%A1tis%20de%207%20dias%20da%20ENERZ!" target="_blank" class="btn btn-primary btn-lg pricing-cta"
                     id="pricingCta">
-                    Começar agora
+                    Começar agora — é grátis
                 </a>
-                <p class="pricing-note">7 dias de garantia.</p>
+                <p class="pricing-note">Teste gratuito de 7 dias. Sem compromisso.</p>
             </div>
         </div>
     </section>
