--- a/index.html
+++ b/index.html
@@ -351,8 +351,10 @@
     <section class="pricing" id="precos">
         <div class="container">
             <h2 class="section-title text-center">Escolha seu <span class="text-primary">Plano</span></h2>
-            <p class="section-subtitle text-center" style="margin-bottom: 3rem;">Todos os planos incluem 7 dias grátis
+            <p class="section-subtitle text-center" style="margin-bottom: 1.5rem;">Todos os planos incluem 7 dias grátis
                 para teste. Cancele quando quiser.</p>
+            <p class="pricing-security-note">🔒 Você será redirecionado para buy.stripe.com, seus dados estão protegidos
+            </p>
 
             <div class="pricing-grid">
                 <!-- Mensal -->
