--- a/index.html
+++ b/index.html
@@ -351,10 +351,15 @@
     <section class="pricing" id="precos">
         <div class="container">
             <h2 class="section-title text-center">Escolha seu <span class="text-primary">Plano</span></h2>
-            <p class="section-subtitle text-center" style="margin-bottom: 1.5rem;">Todos os planos incluem 7 dias grátis
-                para teste. Cancele quando quiser.</p>
-            <p class="pricing-security-note">🔒 Você será redirecionado para buy.stripe.com, seus dados estão protegidos
-            </p>
+            <p class="section-subtitle text-center" style="max-width: 500px; margin: 0 auto 1.5rem;">Todos os planos
+                incluem 7 dias grátis para teste. Cancele quando quiser.</p>
+            <div class="pricing-security-note">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
+                    <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
+                </svg>
+                <span>Você será redirecionado para <strong>buy.stripe.com</strong> — seus dados estão protegidos</span>
+            </div>
 
             <div class="pricing-grid">
                 <!-- Mensal -->
