--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
                         </svg>
                         <span>Nova Era da Nutrição</span>
                     </div>
-                    <h2 class="section-title">Sua Dieta com <span class="text-primary">IA</span> <span
-                            style="color: #25D366;">pelo WhatsApp</span></h2>
+                    <h2 class="section-title">Sua Dieta com <span class="text-primary">IA</span> pelo <span
+                            style="color: #25D366;">WhatsApp</span></h2>
                     <p class="section-subtitle">
                         Veja como a ENERZ cria e ajusta sua dieta em tempo real, adaptando-se às suas necessidades e
                         preferências.
